# Madrid-Education-Statistics-Extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  datos_notas.py  pyproject.toml  requirements.txt
data/: centros_educativos.csv
examples/: Institutos_Sur_Extraccion_Clics.csv  README.md
src/: extractor.py  utils.py
